--- a/src/global.less
+++ b/src/global.less
@@ -52,3 +52,14 @@ ol {
     min-height: 100vh;
   }
 }
+
+// 自定义组件样式
+.ant-card-body {
+  .ant-card-meta {
+    display: flex;
+  }
+  .ant-card-meta-detail {
+    display: flex;
+    align-items: center;
+  }
+}
